# balti_hub

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/backend/: .dockerignore  Dockerfile  pyproject.toml
apps/backend/src/: __init__.py  exception.py  server.py
apps/backend/src/auth/: __init__.py  auth.py
apps/backend/src/config/: config.py
apps/backend/src/exception_handlers/: app_exception_handler.py
apps/backend/src/middlewares/: process_time_middleware.py  rate_limiter_middleware.py  security_header_middleware.py
apps/backend/src/models/: blobs.py  users.py
apps/backend/src/routes/: __init__.py  api.py
apps/backend/src/routes/blob_routes/: __init__.py  blob.py  deps.py
apps/backend/src/routes/login_routes/: __init__.py  login.py
apps/backend/src/routes/user_routes/: __init__.py  admin_users.py  users.py
apps/backend/src/schemas/login_schemas/: __init__.py
apps/backend/src/schemas/user_schemas/: __init__.py
apps/backend/src/service/: __init__.py
apps/backend/src/service/blob_storage_service/: __init__.py  blob_service.py  exception.py
apps/backend/src/service/redis_service/: __init__.py  client.py
apps/frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/api/: admin.ts  auth.ts  blobs.ts  users.ts
docs/: api.md  architecture.md  contributing.md  deployment.md  development.md  environment.md  models.md
src/: __init__.py  server.py
src/auth/: auth.py
src/config/: config.py
src/exception_handlers/: app_exception_handler.py
src/middlewares/: __init__.py  rate_limiter_middleware.py
src/models/: __init__.py  users.py
src/routes/: api.py
src/routes/blob_routes/: blob.py  deps.py
src/routes/user_routes/: __init__.py  admin_users.py  users.py
src/schemas/: __init__.py
src/schemas/blob_schemas/: __init__.py  response_schema.py
src/service/: __init__.py
src/service/blob_storage_service/: blob_service.py  exception.py
(+26 files in other folders)
