[project]
name = "balti-hub"
version = "0.1.0"
description = "A blob cloud service for storing objects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "redis>=7.4.0",
    "uvicorn>=0.42.0",
]


[project.scripts]
dev = "src:dev"
server = "src:server"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# src as package
[tool.hatch.build.targets.wheel]
packages = ["src"]

