[project]
name = "balti-hub"
version = "0.1.0"
description = "A blob cloud service for storing objects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "bcrypt>=5.0.0",
    "beanie>=2.1.0",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pymongo>=4.16.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=7.4.0",
    "uuid6>=2025.0.1",
    "uvicorn>=0.42.0",
]


[project.scripts]
dev = "src:dev"
server = "src:server"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# src as package
[tool.hatch.build.targets.wheel]
packages = ["src"]

